--- a/vertretungsplaner/src/App.css
+++ b/vertretungsplaner/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -25,14 +14,46 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #77a30f;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+div#root{
+  padding:20px;
+}
+
+ul{
+  list-style: none;
+  padding: 0;
+  border: 0px solid black;
+  border-left-width: 1px;
+  border-right-width: 1px;
+  border-collapse: collapse;
+  border-radius: 10px;
+}
+
+li{
+  padding: 20px;
+  border: 1px solid black;
+  border-width: 0px;
+  border-top-width: 1px;
+  display: block;
+}
+
+li:last-child{
+  border-bottom-width: 1px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+li:first-child{
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+td{
+  width: 50px;
+}
+
+.info{
+  font-size: 12px;
 }
